# new-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/tests/: test_health.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
docs/: architecture.md  deployment-candidates.md  product.md  wsl2-checklist.md
docs/decisions/: 0001-development-environment.md
